vest-dsl/test/bad/enum_constraint_non_enum_target.vest
num = u8

bad_constraint = {
  field: num | A,
}
